styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab+Highlight:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Mozilla+Text:wght@200..700&display=swap');

:root {
  /* Colors */
  --color-black: 0 0 0;
  --color-preblack: 18 18 23;
  --color-darkengray: 32 32 37;
  --color-darkgray: 75 75 80;
  --color-gray: 190 190 195;
  --color-lightgray: 240 240 245;
  --color-lightengray: 250 250 255;
  --color-white: 255 255 255;
  --color-error: 255 79 94;
  --color-info: 0 255 255;
  --color-poisoned: 215 125 255;
  --color-success: 20 220 140;
  --color-warning: 250 225 30;

  /* Components */
  --border-color: light-dark(rgb(var(--color-gray)), rgb(var(--color-darkgray)));
  --bg-card: light-dark(rgb(var(--color-lightgray)), rgb(var(--color-darkengray)));
  --bg-card-secondary: light-dark(rgb(var(--color-lightengray)), rgb(var(--color-darkengray)));
  --text-color: light-dark(rgb(var(--color-black)), rgb(var(--color-white)));

  /* Basics */
  --pixel: .0625rem; /* 1px */
  --default-font-size: 1rem; /* 16px on global browsers, or user settings */
  --default-border-radius: .25rem;
  --font-roboto: 'Mozilla Text', 'Arial', sans-serif;
  --font-zilla-slab: 'Zilla Slab', 'Times New Roman', serif;
  --font-zilla-slab-highlight: 'Zilla Slab Highlight', 'Times New Roman', serif;
}

* {
  box-sizing: border-box;
  color-scheme: light dark;
  margin: 0;
  padding: 0;
}

body {
  background-color: light-dark(rgb(var(--color-white)), rgb(var(--color-preblack)));
  color: var(--text-color);
  font-family: var(--font-roboto);
  font-size: var(--default-font-size);
  line-height: 1.375;
}

#root {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

.heading-container,
.footer-container {
  background-color: rgb(var(--color-black));
  color: rgb(var(--color-white));
  padding: 2em;
  line-height: 1.125;

  .heading-container-decoration {
    font-family: var(--font-zilla-slab-highlight);
    font-size: 1.75em;
    font-weight: 900;
    margin-bottom: 0;
    text-transform: uppercase;
    text-box-trim: trim-both;
  }

  .heading-container-title {
    font-family: var(--font-zilla-slab);
    font-weight: 700;
    font-size: 3.75em;
    margin-bottom: .125em;
    text-box-trim: trim-both;
  }

  .heading-container-subtitle {
    font-weight: 500;
    font-size: 1.5em;
    margin-bottom: 0;
  }

  a {
    color-scheme: dark;
  }
}

.main-container {
  flex: auto;

   @media (width >= 64rem) {
     display: grid;
     grid-template-columns: 30% 70%;
  }

   @media (width >= 120rem) {
     display: grid;
     grid-template-columns: 20% 80%;
  }
}

table {
  border-collapse: collapse;
}

hr {
  border: none;
  border-top: var(--pixel) solid var(--border-color);
  margin-block: 1em;
}

button,
label,
input[type="checkbox"] {
  cursor: pointer;
}

button {
  &.filter-btn {
    align-items: center;
    background-color: color-mix(currentcolor 5%);
    border: var(--pixel) dashed currentcolor;
    border-radius: 10em;
    color: light-dark(rgb(var(--color-darkgray)), rgb(var(--color-lightgray)));
    display: inline-flex;
    gap: .25em;
    padding: .3em .65em;

    &:hover {
      background-color: light-dark(rgb(var(--color-black) / 10%), rgb(var(--color-white) / 20%));
    }

    &:not([data-filter="off"]) {
    border: var(--pixel) solid currentcolor;
    }

    &[data-filter="show"] {
      background-color: rgb(var(--color-success) / 10%);
      color: light-dark(color-mix(rgb(var(--color-success)) 80%, rgb(var(--color-black))) , rgb(var(--color-success)));

      &:hover {
        background-color: rgb(var(--color-success) / 20%);
      }
    }

    &[data-filter="hide"] {
      background-color: rgb(var(--color-error) / 10%);
      color: light-dark(color-mix(rgb(var(--color-error)) 80%, rgb(var(--color-black))) , rgb(var(--color-error)));

      &:hover {
        background-color: rgb(var(--color-error) / 20%);
      }
    }
  }
}

input[type="reset"],
button {
  border: var(--pixel) solid rgb(var(--color-gray));
  border-radius: var(--default-border-radius);
  font-weight: 700;
  padding: .5em;
}

input[type="search"],
.selector,
kbd {
  background-color: light-dark(rgb(var(--color-white) / 40%), rgb(var(--color-black) / 40%));
  border: var(--pixel) solid rgb(var(--color-gray));
  border-radius: var(--default-border-radius);
  box-shadow: inset 0 calc(-1 * var(--pixel)) 0 var(--pixel) light-dark(rgb(var(--color-lightgray)), rgb(var(--color-darkgray)));
}

input[type="search"],
.selector {
  padding: .5em;
}

kbd {
  font-size: .8em;
  padding: .2em .325em;
  vertical-align: baseline;
}

input[type="search"],
input[type="reset"],
.prev-next-btn {
  height: 2.5em;
}

.filters-bar,
.container {
  display: flex;
  flex-direction: column;
  gap: 2em;
  padding: 2em;
}

.filters-bar {
  background-color: var(--bg-card-secondary);
  
  @media (width < 64rem) {
    display: none;
  }
}

.filters-bar-item,
.container-item {
  background-color: light-dark(rgb(var(--color-white)), rgb(var(--color-black)));
  border: var(--pixel) solid var(--border-color);
  border-radius: var(--default-border-radius);
  box-shadow: .1em .2em .2em -.1em light-dark(rgb(var(--color-gray)), rgb(var(--color-black)));
  overflow: hidden;

  .filters-bar-item-title,
  .container-item-title,
  .filters-bar-item-content,
  .container-item-content,
  .filters-bar-item-hint {
    padding: 1em;
  }

  .filters-bar-item-content.filters-flex {
    display: flex;
    flex-wrap: wrap;
    gap: .5em;
  }

  .filters-bar-item-title,
  .container-item-title,
  .table-container-title {
    background-color: var(--bg-card);
    border-bottom: var(--pixel) solid var(--border-color);

    h3 {
      font-size: .9em;
      font-weight: 600;
      line-height: 1;
      text-transform: uppercase;
    }
  }

  .filters-bar-item-hint {
    background-color: var(--bg-card);
    border-top: var(--pixel) solid var(--border-color);
    color: light-dark(rgb(var(--color-darkgray)), rgb(var(--color-gray)));
    font-size: .875em;
  }

  .category-filter {
    .category-filter-list-filter {
       display: flex;
       gap: .5em;
    }

    .category-filter-list-group,
    .category-filter-list-group-items {
      list-style: none;
    }

    .category-filter-list-group {
      margin-block: 1em;
    }

    .category-filter-list-group-title {
      font-weight: 600;
    }

    .category-filter-list-group-items {
      margin-block: .25em;
      padding-left: .5em;
    }
  }

  .table-container {
    width: 100%;

    th, td {
      padding: 1em;
    }

    td:not(:first-child) {
      text-align: center;

      &.parity-anchor {
        anchor-name: --parity-box;
        anchor-scope: --parity-box;
        cursor: pointer;
        position: relative;

        .parity-anchor-container {
          align-self: anchor-center;
          cursor: default;
          display: none;
          position: fixed;
          position-anchor: --parity-box;
          right: anchor(left);
          text-align: left;

          /* Design of the anchor element */
          background-color: var(--bg-card-secondary);
          border: var(--pixel) solid var(--border-color);
          border-radius: var(--default-border-radius);
          padding: .5rem;

          p {
            margin-bottom: 0;
          }
        }

        &:hover > .parity-anchor-container {
          align-items: center;
          display: grid;
          grid-template:
            "h h" max-content
            "l  i" auto;
          gap: .5rem;

          > .parity-anchor-container-title {
            grid-area: h;
            font-weight: 700;
            margin: 0;
            text-align: center;
          }

          &::after {
            content: "";
            border: .5rem solid transparent;
            border-left-color: var(--border-color);
            left: 100%;
            position: absolute;
            top: 50%;
            transform: translateY(-50%);
          }
        }
      }
    }

    tr:nth-child(even) {
      background-color: var(--bg-card-secondary);
    }
  }
}

.stats-bar {
  border-radius: var(--default-border-radius);
  display: flex;
  height: .5em;
  overflow: hidden;
  margin-bottom: .5em;

  .stats-bar-outdated,
  .stats-bar-poisoned,
  .stats-bar-translated,
  .stats-bar-untranslated {
    color: transparent;
    font-size: .001em;
  }

  .stats-bar-outdated {
    background-color: rgb(var(--color-warning));
  }

  .stats-bar-poisoned {
    background-color: rgb(var(--color-poisoned));
  }

  .stats-bar-translated {
    background-color: rgb(var(--color-success));
  }

  .stats-bar-untranslated {
    background-color: rgb(var(--color-error));
  }
}

.stats-details {
  display: flex;
  font-size: .875em;
  gap: .75em;
}

.nav-bar {
  display: grid;
  grid-template-areas: "search pagination";
  box-shadow: none;
  padding: 1em;

  .nav-bar-search {
    grid-area: search;

    input[type="search"] {
      width: 100%;
    }
  }

  .nav-bar-pagination {
    grid-area: pagination;
    justify-self: end;
  }

  .prev-next-btn {
    font-weight: 700;
    width: 2.5em;
  }

  .current-page {
    font-weight: 600;
  }
}

.error-decoration {
  border-color: rgb(var(--color-error) / 50%);

  .container-item-title {
    background-color: rgb(var(--color-error) / 80%);
    border-bottom-color: rgb(var(--color-error) / 50%);
    color: rgb(var(--color-black));
  }

  .container-item-content {
    background-color: rgb(var(--color-error) / 10%);
  }
}

.info-decoration {
  border-color: rgb(var(--color-info) / 50%);

  .container-item-title {
    background-color: rgb(var(--color-info) / 80%);
    border-bottom-color: rgb(var(--color-info) / 50%);
    color: rgb(var(--color-black));
  }

  .container-item-content {
    background-color: rgb(var(--color-info) / 10%);
  }
}

.status-name {
  font-size: .75em;
  font-weight: 600;
}

.dot {
  display: inline-block;
  height: .5rem;
  width: .5rem;
  border-radius: 50%;
  background-color: currentcolor;

  &.dot-outdated {
    background-color: rgb(var(--color-warning));
  }
  
  &.dot-poisoned {
    background-color: rgb(var(--color-poisoned));
  }
  
  &.dot-untranslated {
    background-color: rgb(var(--color-error));
  }
  
  &.dot-translated {
    background-color: rgb(var(--color-success));
  }
}


.highcharts-root {
  @media (prefers-color-scheme: dark) {
    background-color: rgb(var(--color-black));

    .highcharts-background {
      fill: rgb(var(--color-black));
    }

    text {
      fill: rgb(var(--color-white)) !important;
    }

    .highcharts-button-disabled text {
      fill: rgb(var(--color-white) / 35%) !important;
    }

    .highcharts-text-outline {
      stroke-width: 0;
    }

    .highcharts-button-disabled .highcharts-button-box,
    .highcharts-button-normal .highcharts-button-box,
    .highcharts-button-pressed .highcharts-button-box {
      fill: rgb(var(--color-lightgray) / 25%);
    }

    .highcharts-tooltip-box {
      fill: rgb(var(--color-white));

      text {
        fill: rgb(var(--color-black)) !important;
      }
    }
  }
}

.sr-only {
  border: 0;
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.experimental-badge {
  background-color: rgb(var(--color-info));
  border-radius: var(--default-border-radius);
  color: rgb(var(--color-black));
  display: inline-flex;
  font-size: .875rem;
  font-weight: 700;
  padding: .35rem .5rem;
  text-transform: uppercase;
  text-decoration: underline 2px;
}

